<resources>
    <string name="app_name">BUGlobalMusicFestival</string>
    <string name="title_explore">Explore</string>
    <string name="title_like">Liked</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>

    <!--Like Page Strings-->
    <string name="unlike_check">Are you sure you want to remove\u0020</string>
    <string name="question_mark">\?</string>
    <string name="txtEmptyLike">Start adding your favorite music events! Tap the heart on any event page to start saving your favorites here.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Share Function Strings-->
    <string name="shareSms">Check out this great event:\u0020</string>
    <string name="hashTag">\! \#BUGlobablMusicFestival</string>
    <string name="chooser">Choose app to share</string>
    <string name="appUrl">Check out BUGMF App at: https://play.google.com/store/apps</string>

    <string name="twitter_consumer_key" translatable="false">riVQO4XGOSDVQOlVC452KOQJA</string>
    <string name="twitter_consumer_secret" translatable="false">PqlE1QGltlR2OuK996PJJypwDKk4FxDBanSorjIGOCJ7dFuRTJ</string>
    <string name="loading">Loading...</string>
    <string name="cannot_get_email">Cannot retrieve user email. please try other Sign-in options.</string>
    <string name="facebook_app_id">2102038940033779</string>
    <string name="fb_login_protocol_scheme">fb2102038940033779</string>

    <string name="banner_app_id">ca-app-pub-6996605839799649~8321977534</string>
    <string name="banner_ad_unit_id">ca-app-pub-6996605839799649/5756168140</string>

    <!--About Page Strings-->
    <string name="aboutheader">“Artistic engagement brings immeasurable value to our social and academic development, impacting not only the way we perceive the world but how we approach so many disciplines, from the sciences to the humanities. The Boston University Arts Initiative ensures that the arts are fundamental to the BU student experience inside and outside of the classroom.”\n<b>— Jean Morrison, University Provost and Chief Academic Officer</b></string>
    <string name="missiontitle">Our Mission</string>
    <string name="mission">The BU Global Music Festival is annual celebration of musical cultures around the world featuring high-caliber, international artists as well as vibrant local musical communities, bringing the wider musical world to the doorstep of thousands of students, adults, young people, and families throughout the Boston area.</string>
    <string name="member">Thanks to Sponsors...</string>
    <string name="contacttitle">Contact</string>
    <string name="BUArts">Boston University Arts Initiative\n775 Commonwealth Avenue, Suite 201\n\n<b>Phone:   </b>+1 617.358.0489\n<b>Email: </b>artsinbu@bu.edu\n<b>Website:   </b>www.bu.edu/gmf</string>


    <!--Ad Banner Strings-->
    <string name="partner_wbur">WBUR</string>
    <string name="partner_gp">Global Program</string>


    <string name="googlelogin">Login with Google</string>
    <string name="facebooklogin">Login with Facebook</string>
    <string name="twitterlogin">Login with Twitter</string>
    <string name="guestlogin">Login with Guest</string>
    <string name="exception">Exception</string>



    <string name="Workshop">Workshop</string>
    <string name="workshopOnTop">workshopOnTop</string>
    <string name="artistID">artistID</string>
    <string name="highlight">highlight</string>
    <string name="artistName">artistName</string>
    <string name="ArtistSingle">Artist single line bio goes here</string>
    <string name="comma">\,\u0020</string>
    <string name="dash">\u0020\-\u0020</string>
    <string name="Bazaar">Bazaar</string>
    <string name="eventId">eventId</string>
    <string name="EmptyString" />
    <string name="space">\u0020</string>
    <string name="Extra">\u0020\.\.\.</string>
    <string name="DATE_5">5</string>
    <string name="DATE_6">6</string>
    <string name="MONTH">OCT</string>
    <string name="Removed">Removed</string>
    <string name="Added">Added</string>
    <string name="date1">10/5 Fri.\u0020</string>
    <string name="date2">10/6 Sat.\u0020</string>
    <string name="twitterApk">com.twitter.android</string>
    <string name="facebookApk">com.facebook</string>
    <string name="gmApk">com.google.android.gm</string>
    <string name="messaging">messaging</string>
    <string name="textPlain">text/plain</string>
    <string name="Except">\u0020must implement ExploreInteractionListener</string>
    <string name="AuthenticationFailed">Authentication failed.</string>
    <string name="Error1">Error copying database</string>
    <string name="email">email</string>
    <string name="public_profile">public_profile</string>
    <string name="SigninSuc">Signin Successful</string>
    <string name="SignFail">Signin failed</string>
    <string name="cant">You can\'t make map requests</string>
    <string name="CAS">CAS</string>
    <string name="GSU">GSU</string>
    <string name="BU_GSU">BU_GSU</string>
    <string name="BU_Tsai">BU_Tsai</string>
    <string name="Location">location</string>
    <string name="gmfUrl">https://www.bu.edu/gmf</string>
    <string name="surveymonkey">https://www.surveymonkey.com/r/523GWBK</string>
    <string name="concert"><![CDATA[https://concerts1.livenation.com/event/01005383E6B14115?crosssite=TM_US:734408:9044&_ga=2.245148812.888577874.1524944987-1940939807.1522715659]]></string>
    <string name="To">To</string>
    <string name="AddedTo">Added to Google calendar.</string>
    <string name="Exception2">Exception:</string>
    <string name="equal">\u0020\= \?</string>
    <string name="cfa">http://www.bu.edu/cfa/</string>
    <string name="global">http://www.bu.edu/globalprograms/</string>
    <string name="human">http://www.bu.edu/humanities/</string>
    <string name="school">http://www.bu.edu/pardeeschool/</string>
    <string name="wbur">http://www.wbur.org/</string>
    <string name="write">Write Calendars</string>
    <string name="read">Read Calendars</string>
    <string name="grant">You need to grant access to\u0020</string>
    <string name="and">\u0020and\u0020</string>
    <string name="sync">\u0020to Sync your schedule to Calendars.</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="some">Some Permission is Denied</string>


</resources>
